--- a/assets/css/RMJ-stylesheet.css
+++ b/assets/css/RMJ-stylesheet.css
@@ -268,7 +268,7 @@ header
 
 .header-area .main-nav {
   min-height: 80px;
-  background: red;
+  background: transparent;
 }
 
 .header-area .main-nav .logo {
