--- a/assets/css/RMJ-stylesheet.css
+++ b/assets/css/RMJ-stylesheet.css
@@ -1155,7 +1155,7 @@ calculator
 
 section.calculator {
   margin-top: 150px;
-  background-image: url(../images/calculator-bg.jpg);
+  background-image: url(../images/contact_us_background.webp);
   background-repeat: no-repeat;
   background-position: center center;
   background-size: cover;
